<resources>
    <string name="app_name">HamiltonTevin_ECommerce</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="product">Product</string>
    <string name="cart">Cart</string>
    <string name="rating">Rating</string>
    <string name="check_out">Check Out</string>
    <string name="total">Total</string>
    <string name="_0">$0</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hello_guest">Hello Guest</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="member_offer">For exclusive benfits and exciting offers for our trusted members only</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="description">Description</string>
    <string name="email_address">Email Address:</string>
    <string name="n_a">N/A</string>
    <string name="phone_number">Phone Number:</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>